--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,24 @@
-#logging.level.org.springframework.ws.client.MessageTracing.sent=TRACE
-#logging.level.org.springframework.ws.client.MessageTracing.received=TRACE
-#spring.jpa.database=POSTGRESQL
-#spring.jpa.database-platform = org.hibernate.dialect.PostgreSQL94Dialect
-#spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
-#spring.datasource.platform=postgres
-#spring.jpa.show-sql=true
-#spring.database.driverClassName=org.postgresql.Driver
-#spring.datasource.url=jdbc:postgresql://guru.ct8tv8r3daga.us-east-1.rds.amazonaws.com:5432/comunicador
-#spring.datasource.username=comunicador
-#spring.datasource.password=?comunicador#19
-#spring.jpa.hibernate.ddl-auto=update
-#spring.datasource.initialization-mode=never
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=p
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.h2.console.enabled=true
+
+spring.h2.console.path=/h2-console
+spring.h2.console.settings.trace=false
+spring.h2.console.settings.web-allow-others=false
+
+# logging.level.org.springframework.ws.client.MessageTracing.sent=TRACE
+# logging.level.org.springframework.ws.client.MessageTracing.received=TRACE
+# spring.jpa.database=POSTGRESQL
+# spring.jpa.database-platform = org.hibernate.dialect.PostgreSQL94Dialect
+# spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+# spring.datasource.platform=postgres
+# spring.jpa.show-sql=true
+# spring.database.driverClassName=org.postgresql.Driver
+# spring.datasource.url=jdbc:postgresql://guru.ct8tv8r3daga.us-east-1.rds.amazonaws.com:5432/comunicador
+# spring.datasource.username=comunicador
+# spring.datasource.password=?comunicador#19
+# spring.jpa.hibernate.ddl-auto=update
+# spring.datasource.initialization-mode=never
